test: cubrir ramas condicionales nulas para alcanzar target de SonarQube